# bx

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
bx/: CMakeLists.txt
bx/bx/: CMakeLists.txt  bx.cpp
bx/core/: CMakeLists.txt  args.cpp  args.hpp  handle.cpp  handle.hpp  run.cpp  run.hpp  subcommand.cpp  subcommand.hpp  subprocess.cpp  subprocess.hpp  user.cpp  user.hpp  verbosity.cpp  verbosity.hpp  which.cpp  which.hpp
bx/tool/: tool.cpp  tool.hpp
cmake/: CMakeLists.txt  bx.cmake
test/: CMakeLists.txt
test/bx/: CMakeLists.txt
test/core/: CMakeLists.txt  args.cpp  core.cpp  subprocess.cpp  which.cpp
test/tool/: CMakeLists.txt  tool.cpp
tests/: CMakeLists.txt
tests/cmake/: CMakeLists.txt
tests/cmake/test-basic/: main.cpp
tests/cmake/test-compile-error/: CMakeLists.txt  main.cpp
tests/cmake/test-configure-error/: CMakeLists.txt
